--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <li><a href="#pillars">Curriculum</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#portfolio">Gallery</a></li>
+      <li><a href="#enroll">Enroll</a></li>
       <li><a href="#contact">Contact</a></li>
-      <!-- ✅ Enroll button styled with cta-mini -->
-      <li><a href="#enroll" class="cta-mini">Enroll</a></li>
+      <!-- ✅ Enroll Now button -->
+      <li><a href="signup.html" class="cta-mini">Enroll Now</a></li>
     </ul>
   </nav>
 
@@ -23,7 +24,7 @@
   <section class="hero">
     <div>
       <h1>Fashion Education for Creatives</h1>
-      <a href="signup.html" class="btn-primary">Enroll Now</a>
+      <a href="signup.html" class="btn-primary">Get Started</a>
     </div>
   </section>
 
@@ -39,6 +40,15 @@
       </div>
       <div class="pillar-card" style="background-image:url('assets/draping.jpg')">
         <h3>Draping Techniques</h3>
+      </div>
+      <div class="pillar-card" style="background-image:url('assets/sewing.jpg')">
+        <h3>Sewing Fundamentals</h3>
+      </div>
+      <div class="pillar-card" style="background-image:url('assets/fashion-history.jpg')">
+        <h3>Fashion History</h3>
+      </div>
+      <div class="pillar-card" style="background-image:url('assets/entrepreneurship.jpg')">
+        <h3>Fashion Entrepreneurship</h3>
       </div>
     </div>
   </section>
@@ -73,18 +83,54 @@
           <p>Digital CAD</p>
         </div>
       </div>
+      <!-- Add more gallery items as needed -->
     </div>
   </section>
 
-  <!-- Contact / Newsletter -->
+  <!-- Enrollment Section -->
+  <section id="enroll" class="enroll-container">
+    <h2>Enroll in Our Courses</h2>
+    <div class="form-layout">
+      <div>
+        <div class="course-item">
+          <p>Pattern Making</p>
+          <p>$100</p>
+        </div>
+        <div class="course-item">
+          <p>Digital CAD</p>
+          <p>$120</p>
+        </div>
+        <div class="course-item">
+          <p>Draping Techniques</p>
+          <p>$90</p>
+        </div>
+        <div class="course-item">
+          <p>Sewing Fundamentals</p>
+          <p>$80</p>
+        </div>
+        <div class="course-item">
+          <p>Fashion History</p>
+          <p>$70</p>
+        </div>
+        <div class="course-item">
+          <p>Fashion Entrepreneurship</p>
+          <p>$150</p>
+        </div>
+      </div>
+      <div class="enrollment-summary">
+        <h3>Summary</h3>
+        <p>Select your courses to see total tuition.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
   <section id="contact" class="contact-section">
     <h2>Contact Us</h2>
     <div class="contact-grid">
       <div>
         <p>Email: info@xaragoacademy.com</p>
         <p>Phone: +252 63 1234567</p>
-        <!-- ✅ Newsletter button -->
-        <button class="newsletter-btn">Subscribe to Newsletter</button>
       </div>
       <div class="map-container">
         <iframe src="https://maps.google.com/maps?q=Hargeisa&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="250"></iframe>
@@ -96,10 +142,14 @@
   <footer class="main-footer">
     <p>&copy; 2025 Xarago Fashion Academy</p>
     <div class="social-picture-links">
-      <a href="#">FB</a>
-      <a href="#">IG</a>
-      <a href="#">YT</a>
+      <!-- ✅ Using your asset icons -->
+      <a href="#"><img src="assets/icon-fb.png" alt="Facebook"></a>
+      <a href="#"><img src="assets/icon-wh.png" alt="WhatsApp"></a>
+      <a href="#"><img src="assets/icon-ig.png" alt="Instagram"></a>
+      <a href="#"><img src="assets/icon-pin.png" alt="Pinterest"></a>
     </div>
+    <!-- ✅ Newsletter button back under social links -->
+    <button class="newsletter-btn">Subscribe to Newsletter</button>
   </footer>
 </body>
 </html>
